src/objects/c2g__codaTaxCode__c.object
<CustomObject>
    <customHelpPage>c2g__codahelptaxcode</customHelpPage>
    <description>Stores details on tax codes.</description>
    <fields>
        <fullName>Config_Version__c</fullName>
        <label>Config Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Old_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Old_Version__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__ChildTaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GST Child Tax Code</description>
        <label>GST</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Tax Codes (first child)</relationshipLabel>
        <relationshipName>ChildTaxCode1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ChildTaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PST/QST Child Tax Code</description>
        <label>PST/QST</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Tax Codes (second child)</relationshipLabel>
        <relationshipName>ChildTaxCode2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The General Ledger Account</description>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Tax Codes (General Ledger Account)</relationshipLabel>
        <relationshipName>TaxCodesGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IsParent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__TaxGroup__c</fullName>
        <label>Tax Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tax Group 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__TaxModel__c</fullName>
        <description>Tax Model</description>
        <label>Tax Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HST</fullName>
                </value>
                <value>
                    <fullName>PST &amp; GST</fullName>
                </value>
                <value>
                    <fullName>GST &amp; QST</fullName>
                </value>
                <value>
                    <fullName>GST</fullName>
                </value>
                <value>
                    <fullName>PST</fullName>
                </value>
                <value>
                    <fullName>QST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffvat__NetBox__c</fullName>
        <label>Net Box</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Box 6</fullName>
                </value>
                <value>
                    <fullName>Box 7</fullName>
                </value>
                <value>
                    <fullName>Box 8</fullName>
                </value>
                <value>
                    <fullName>Box 9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffvat__TaxBox__c</fullName>
        <label>Tax Box</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Box 1</fullName>
                </value>
                <value>
                    <fullName>Box 2</fullName>
                </value>
                <value>
                    <fullName>Box 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tax Code</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Description__c</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <columns>c2g__TaxGroup__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tax Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>